Bug 289346 - "Merge Entries" complains about identical values
Summary: "Merge Entries" complains about identical values
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.4
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-19 10:13 UTC by Ph. Marek
Modified: 2011-12-27 03:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ph. Marek 2011-12-19 10:13:31 UTC
Version:           2.3.4 (using KDE 4.6.5) 
OS:                Linux

Somehow I got duplicate entries into my collection - with only the ISBN set, and nothing else. (Might have happened when importing via ISBN scanning.)

Now, I tried to merge these entries into one (as there's no "remove duplicates" function); but it "complains" about the ID field being specified in both entries, even though it has the same, identical value in both!

Furthermore

Reproducible: Always

Steps to Reproduce:
Duplicate an entry via menu; select both, and call "Merge entries."

Actual Results:  
Warning messages about field contents.

Expected Results:  
No warning if field contents are _identical_.

Furthermore "cancel" in the dialog doesn't work - both entries get merged nonetheless.
Comment 1 Robby Stephenson 2011-12-27 03:16:46 UTC
Git commit 7b3b8ce99c69f2c691d675b52fe72692dacfc4a4 by Robby Stephenson.
Committed on 27/12/2011 at 04:15.
Pushed by rstephenson into branch '2.3'.

Ignore conflicting entry IDs when merging entries

Do not checking entry ID or creation/modification date when comparing
entries to merge them. Use the return value from the comparison
correctly. Check to see if the dialog has been cancelled.
Related: bug 289346
FIXED-IN: 2.3.5

M  +6    -0    ChangeLog
M  +21   -1    src/commands/updateentries.cpp
M  +25   -17   src/document.cpp
M  +1    -1    src/document.h
M  +11   -5    src/entrymerger.cpp
M  +1    -1    src/entryupdatejob.cpp
M  +53   -0    src/tests/collectiontest.cpp

http://commits.kde.org/tellico/7b3b8ce99c69f2c691d675b52fe72692dacfc4a4
Comment 2 Robby Stephenson 2011-12-27 03:20:11 UTC
Git commit d2caad4b24006753fafb71d550e82f14e39a3a8d by Robby Stephenson.
Committed on 27/12/2011 at 04:15.
Pushed by rstephenson into branch 'master'.

Ignore conflicting entry IDs when merging entries

Do not checking entry ID or creation/modification date when comparing
entries to merge them. Use the return value from the comparison
correctly. Check to see if the dialog has been cancelled.
Related: bug 289346
FIXED-IN: 2.3.5

M  +6    -0    ChangeLog
M  +21   -1    src/commands/updateentries.cpp
M  +25   -17   src/document.cpp
M  +1    -1    src/document.h
M  +11   -5    src/entrymerger.cpp
M  +1    -1    src/entryupdatejob.cpp
M  +53   -0    src/tests/collectiontest.cpp

http://commits.kde.org/tellico/d2caad4b24006753fafb71d550e82f14e39a3a8d