Ignore conflicting entry IDs when merging entries

Do not checking entry ID or creation/modification date when comparing
entries to merge them. Use the return value from the comparison
correctly. Check to see if the dialog has been cancelled.
BUG: 289346
FIXED-IN: 2.3.5